# ai-companion

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.en.md  README.md  TEST_BOTS_README.md  TODO.md  docker-compose.yml  hermes_constants.py  persona_template.json  persona_template_backstory.json  persona_template_values.json  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
ai-companion-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ai-companion-ui/src-tauri/: Cargo.toml  tauri.conf.json
ai-companion-ui/src-tauri/src/: lib.rs  main.rs
ai-companion-ui/src-tauri/src/commands/: config.rs  logs.rs  memory.rs  mod.rs  process.rs  session.rs  system.rs
ai_companion/: __init__.py  __main__.py  autostart.py  embedding_setup.py  logging_utils.py  main.py  migration.py  paths.py  setup.py  temporal_guard.py  ui_server.py  updater.py  utils.py
config/: bots.yaml  bots.yaml.example  config.yaml.example  models.yaml  models.yaml.example
docs/: ARCHIVED_phase1_plan.md  BOT_DESIGN_GUIDE.md  BOT_JSON_FIELDS.md  DESIGN_human_like_memory_token_architecture.md  DESIGN_phase5_proactive.md  DESIGN_phase6_life_timeline.md  DESIGN_phase7_weixin_gateway.md  DESIGN_phase8_skill_capability_system.md  DESIGN_vector_memory_architecture.md  FIX_PROGRESS_2026-04-28.md  GUIDE.md  IMPLEMENTATION_phase4_refusal.md  IMPLEMENTATION_phase5_proactive.md  MEMORY_SYSTEM_OPTIMIZATION.md  PERSONA_IMPORTER.md  PRD_dreaming_memory_productization.md  PRD_记忆系统产品收敛方案.md  SYSTEM_KNOWLEDGE_BASE_2026-04-28.md  SYSTEM_TEST_BUG_REPORT_2026-04-28.md  TEST_BOT_OBSERVATION_PLAN_2026-04-28.md  TEST_REPORT_phase1_3.md  TODO_phase7_weixin_gateway.md  UI_DESIGN.md  UI_SPEC.md  UI_TECH_DESIGN.md  记忆系统架构审计与收敛建议.md
gateway/: __init__.py
hermes_cli/: __init__.py  config.py  env_loader.py
(+423 files in other folders)
