[package]
name = "ai-companion-ui"
version = "1.0.0"
description = "AI Companion Admin Dashboard"
authors = ["AI Companion Team"]
edition = "2021"

[lib]
name = "ai_companion_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
directories = "5"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }


